// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Badge Components - Experimental Enabled Badge Snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 24,
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 8,
        "paddingVertical": 4,
      },
      {
        "backgroundColor": "#F4F5F8",
      },
    ]
  }
>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      [
        {
          "alignSelf": "center",
          "flexShrink": 1,
          "fontSize": 12,
          "lineHeight": 16,
          "textTransform": "uppercase",
        },
        {
          "fontFamily": "Readex Pro",
          "fontStyle": "normal",
          "fontWeight": "400",
        },
        {
          "color": "#555C70",
        },
      ]
    }
  >
    text
  </Text>
</View>
`;

exports[`Test Badge Components Badge Snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 24,
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 8,
        "paddingVertical": 4,
      },
      {
        "backgroundColor": "#F4F5F8",
      },
    ]
  }
>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      [
        {
          "alignSelf": "center",
          "flexShrink": 1,
          "fontSize": 12,
          "lineHeight": 16,
          "textTransform": "uppercase",
        },
        {
          "fontFamily": "Titillium Web",
          "fontStyle": "normal",
          "fontWeight": "600",
        },
        {
          "color": "#555C70",
        },
      ]
    }
  >
    text
  </Text>
</View>
`;
